# jobconnect

./: README.md
backend/: .gitignore  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py  admin.py  admin_endpoint.py  auth_endpoint.py  booking_endpoint.py  client_endpoint.py  notification.py  notification_endpoint.py  payment_endpoint.py  report.py  review_endpoint.py  search_endpoint.py  service_endpoint.py  technician_availability_endpoint.py  technician_endpoint.py  technician_service_endpoint.py
backend/app/core/: config.py
backend/app/database/: __init__.py  database.py  dummy.sql  jobconnectdb.sql  services.sql
backend/app/dependencies/: __init__.py  deps.py
backend/app/models/: __init__.py  admin.py  auth.py  auth_models.py  booking.py  client.py  favorite_technician.py  notification.py  payment_models.py  review.py  service.py  technician.py  technician_availability.py  technician_report.py  technician_service.py  verified_technician.py
backend/app/models/base/: __init__.py  location.py  phone.py  timeslot.py
backend/app/repository/: __init__.py  admin.py  booking.py  client.py  notification.py  payment.py  report.py  review.py  search.py  service.py  technician.py  technician_availability.py  technician_service.py
backend/app/services/: __init__.py  admin.py  auth.py  auth_service.py  booking.py  client.py  notification.py  payment.py  report.py  review.py  search.py  service.py  technician.py  technician_availability.py  technician_service.py
backend/app/utils/: exceptions.py  security.py
frontend/: index.html  (+2 more)
(+57 files in other folders)
